# hello_static_lib

./: README.md  WORKSPACE  build.sh
srcs/libs/common_lib/: BUILD.bazel  common_lib.cc  common_lib.h
srcs/libs/static_lib/: BUILD.bazel  static_lib.cc  static_lib.h
tools/: bazel.rc
